Prueba modificando index con lorem

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     
                             <video src="videos/Heladeria.mp4" controls class="video"> </video>
                         </div>
+                        <div>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, nostrum dolore deleniti illo necessitatibus veniam? Nulla pariatur voluptate aspernatur, eaque quae eveniet fugit ex, odio dolorum sed excepturi nesciunt doloribus.</h4>
+                        </div>
                     </div>
                     
                 </div>
