--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Yo Helados catamarca</title>
 </head>
@@ -46,9 +47,6 @@
     
                             <video src="videos/Heladeria.mp4" controls class="video"> </video>
                         </div>
-                        <div>
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, nostrum dolore deleniti illo necessitatibus veniam? Nulla pariatur voluptate aspernatur, eaque quae eveniet fugit ex, odio dolorum sed excepturi nesciunt doloribus.</h4>
-                        </div>
                     </div>
                     
                 </div>
@@ -74,7 +72,7 @@
         <!--Pongo mis redes ya que el local tdv no cuenta con una-->
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
