--- a/galeria.html
+++ b/galeria.html
@@ -5,23 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Productos</title>
 </head>
 
 <body>
     <header>
-        <div class="gridheader">
-            <div class="divlogo"> <img src="images/logo.jpg" alt="logo de yo helados" class="logo"> </div>
-            <nav class="nav">
-                <a href="index.html"> Inicio </a>
-                <a href="informacion.html"> Informacion </a>
-                <a href="ubicacion.html">Ubicacion</a>
-                <a href="galeria.html">Productos</a>
-                <a href="contacto.html">Contactenos</a>
-            </nav>
-
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light colorfondo tamanonav">
+            <div class="container-fluid">
+                <a class="navbar-brand mover-logo" href="#"><img src="images/logo.jpg" alt="logo de yo helados"
+                        class="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse show flexul" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="informacion.html">Informacion</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="ubicacion.html">Encuentranos</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="galeria.html">Productos</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="contacto.html">Contactenos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="fondoinfo">
@@ -110,7 +130,7 @@
                             </div>
 
                             <div class="baldes">
-                                <div class="box1">
+                                <div class="box1 postreshela">
                                     <h4> Postres helados:</h4>
                                     <li>Bombon escoses</li>
                                     <li>Bombon suizo</li>
