--- a/ubicacion.html
+++ b/ubicacion.html
@@ -5,23 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Ubicacion </title>
 </head>
 
 <body>
     <header>
-        <div class="gridheader">
-            <div class="divlogo"> <img src="images/logo.jpg" alt="logo de yo helados" class="logo"> </div>
-            <nav class="nav">
-                <a href="index.html"> Inicio </a>
-                <a href="informacion.html"> Informacion </a>
-                <a href="ubicacion.html">Ubicacion</a>
-                <a href="galeria.html">Productos</a>
-                <a href="contacto.html">Contactenos</a>
-            </nav>
-
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light colorfondo tamanonav">
+            <div class="container-fluid">
+                <a class="navbar-brand mover-logo" href="#"><img src="images/logo.jpg" alt="logo de yo helados"
+                        class="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse show flexul" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="informacion.html">Informacion</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="ubicacion.html">Encuentranos</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="galeria.html">Productos</a>
+                        </li>
+                        <li class="nav-item nav1">
+                            <a class="nav-link acustom" href="contacto.html">Contactenos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
@@ -33,16 +53,20 @@
                 <div class="acomodar">
                     <div class="blancoubi">
                         <div class="contentubi">
-                            
                             <p>Disponibilidad para Take Away</p>
                             <h3>Encuentranos en San Fernando del Valle de Catamarca:</h3>
-                            <div class="mapa">
-                                <iframe
+                        </div>
+
+                        <div class="mapa">
+                            <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d804.2227874893338!2d-65.71846712192347!3d-28.44807840186364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94242f7730390efd%3A0x61c38d4ed546526b!2sYo%20Helader%C3%ADas!5e0!3m2!1ses!2sar!4v1645570743766!5m2!1ses!2sar"
                                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                            </div>
-                            <h3>En la galeria Patio Palmeras. Local numero 2.</h3>
                         </div>
+                        <div class="contentubi">
+                            <h3>En la galeria Patio Palmeras. Local numero 2.</h3>
+
+                        </div>
+
 
                     </div>
                 </div>
